Bug 46249 - CRASH when browse to HD root directory in FILEOPEN Template dialog
Summary: CRASH when browse to HD root directory in FILEOPEN Template dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other Windows (All)
: medium major
Assignee: Stephan Bergmann
URL:
Whiteboard: target:3.7.0 target:3.5.7 target:3.6.2
Keywords: regression
: 44495 50968 52036 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-02-17 14:22 UTC by Urmas
Modified: 2012-09-17 09:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2012-02-17 14:22:38 UTC
1. Open File/New/Documents & Templates dialog
2. CLick 'My documents' button.
3. Click 'One up level' button.
4. Application aborts.
Comment 1 Urmas 2012-03-09 09:41:50 UTC
UPDATE: Crash occurs when navigated to disk root directory.
Comment 2 manj_k 2012-06-12 06:43:54 UTC
*** Bug 50968 has been marked as a duplicate of this bug. ***
Comment 3 manj_k 2012-06-12 07:14:23 UTC
(In reply to comment #1)
> UPDATE: Crash occurs when navigated to disk root directory.

Crash reproducible (on WinXP 32b) w/ 
- LibO 3.5.4 release
- LibO 3.6.0beta1

Maybe related: 'Bug 44495 - LibO crash when using templates'.
Comment 4 Alexandre Demers 2012-06-12 21:45:11 UTC
While I can reproduce it on Win7 with 3.5.4, I can't on Linux (Arch64). So it seems a Windows only related bug.
Comment 5 Urmas 2012-07-13 10:43:06 UTC
*** Bug 52036 has been marked as a duplicate of this bug. ***
Comment 6 manj_k 2012-07-13 13:19:55 UTC
*** Bug 44495 has been marked as a duplicate of this bug. ***
Comment 7 manj_k 2012-07-13 14:01:30 UTC
Doesn't crash with
LibreOffice 3.4.6 
OOO340m1 (Build:602).

Added keyword 'regression'.
Comment 8 Rainer Bielefeld Retired 2012-07-29 06:56:23 UTC
[Reproducible] with "LibreOffice  3.5.5.3.  German UI/Locale [Build-ID: 7122e39-92ed229-498d286-15e43b4-d70da21] on German WIN7 Home Premium (64bit) 

Still [Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 66e4540]" (tinderbox:Win-x86@6, pull time 2012-07-26 02:09:47)	

No Crash with LibO 3.3.3, LibO 3.4.5, indeed regression
Comment 9 Urmas 2012-08-09 01:41:57 UTC
*** Bug 53252 has been marked as a duplicate of this bug. ***
Comment 10 Rainer Bielefeld Retired 2012-08-20 16:02:32 UTC
I will check fixes for "Bug 53252 - UI: CRASH when edit LibO File Dialog Path Pane" also for this one with next available build with fix included
Comment 11 Stephan Bergmann 2012-08-21 07:11:32 UTC
(In reply to comment #10)
> I will check fixes for "Bug 53252 - UI: CRASH when edit LibO File Dialog Path
> Pane" also for this one with next available build with fix included

I think this is indeed a different issue than bug 53252.  Working on it.
Comment 12 Not Assigned 2012-08-21 10:42:31 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9febb63db2f62cd2b9505dfc4ceb3accc32aecb

Related fdo#46249: FileStatus can have fewer fields than requested
Comment 13 Not Assigned 2012-08-21 10:59:39 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa4fec47a8bb713f960acb474920f2c640e1c58a&g=libreoffice-3-6

Related fdo#46249: FileStatus can have fewer fields than requested


It will be available in LibreOffice 3.6.2.
Comment 14 Not Assigned 2012-08-21 12:30:51 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11df8085ae167e9e3df746fe107144c7ce5a7b6a&g=libreoffice-3-6-1

Related fdo#46249: FileStatus can have fewer fields than requested


It will be available already in LibreOffice 3.6.1.
Comment 15 Stephan Bergmann 2012-08-21 12:45:47 UTC
(In reply to comment #12)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9febb63db2f62cd2b9505dfc4ceb3accc32aecb
> 
> Related fdo#46249: FileStatus can have fewer fields than requested

While that commit fixes one problem I found when looking at this crash, it still does not make the crash go away, as there is a second place now that causes trouble.  But WinDbg gives me no more clues yet than an access violation at pSVData->mbDeInit (vcl/win/source/window/salframe.cxx:5607) and "Stack unwind information not available."
Comment 16 Not Assigned 2012-08-22 07:23:19 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27c7682e5e5859eb353443d6091143694a56bee8

fdo#46249: UCBContentHelper::GetTitle must not fail for void property
Comment 17 Not Assigned 2012-08-22 16:24:36 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc08156b06c82a1a2b9d64b57caaf434485d4d3e&g=libreoffice-3-5

fdo#46249: UCBContentHelper::GetTitle must not fail for void property


It will be available in LibreOffice 3.5.7.
Comment 18 Not Assigned 2012-08-22 16:24:57 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16a63f16699fd1383eb4bea6abfed9a98ed94838&g=libreoffice-3-6

fdo#46249: UCBContentHelper::GetTitle must not fail for void property


It will be available in LibreOffice 3.6.2.