Related fdo#46249: FileStatus can have fewer fields than requested

Turns out 608fe962cc649ad62c489811d3a8666e0e06e5e7 "Let osl::FileStatus getters
assert programming errors" was overly optimistic and misunderstood that
osl_getFileStatus(..., nMask) /can/ return a FileStatus for which isValid(nMask)
is false, esp. for stuff like file names and URLs of Windows drives and servers.
That in turn leads to existing code now calling
rtl::OUString(_aStatus.ustrFileName) etc. with null argument and crashing.

Change-Id: Icd2168e209aa1c7a6df30cd954513d01034923db